[metadata]
name = phbuilder
version = 0.0.4
author = Anton Jansen
author_email = anton.jansen@scilifelab.se
description = System builder for constant-pH simulations in GROMACS.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AntonJansen96/pHbuilder
project_urls =
    Bug Tracker = https://github.com/AntonJansen96/pHbuilder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    argparse
    argcomplete
    configparser

[options.entry_points]
console_scripts =
    phbuilder = phbuilder:entryFunction

[options.packages.find]
where = src
