[metadata]
name = phbuilder
version = 0.0.8
author = Anton Jansen
author_email = anton.jansen@scilifelab.se
description = System builder for constant-pH simulations in GROMACS.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AntonJansen96/pHbuilder
project_urls =
    Bug Tracker = https://github.com/AntonJansen96/pHbuilder/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
[options]
include_package_data = True
package_dir =
    = .
packages = find:
python_requires = >=3.11
install_requires =
    argcomplete>=3.1.1
    configparser>=6.0.0

[options.package_data]
phbuilder = ffield/*, ffield/charmm36-mar2019-cphmd.ff/*

[options.entry_points]
console_scripts =
    phbuilder = phbuilder:entryFunction

[options.packages.find]
where = .
