[metadata]
name = phbuilder
version = 1.2.3
author = Anton Jansen
author_email = anton.jansen@scilifelab.se
description = System builder for constant-pH simulations in GROMACS.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/gromacs-constantph/phbuilder
project_urls =
    Bug Tracker = https://gitlab.com/gromacs-constantph/phbuilder/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
    Intended Audience :: Science/Research
    Natural Language :: English
[options]
include_package_data = True
package_dir =
    = .
packages = find:
python_requires = >=3.8
install_requires =
    argcomplete>=3.1.1
    configparser>=6.0.0

[options.package_data]
phbuilder = ffield/*, ffield/charmm36-mar2019-cphmd.ff/*

[options.entry_points]
console_scripts =
    phbuilder = phbuilder:entryFunction

[options.packages.find]
where = .
